BZ202591 SQLBuilder integration with sqleditor. Invoke SQLBuilder DML Dialog from the sqleditor via the editor.core's default UIComponentService.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/plugin.xml
@@ -34,9 +34,8 @@
     </extension>
     
     <!-- This extension point should not be contributed to by any other plugins -->
-   <extension-point id="SQLBuilderUIComponentService" name="SQLBuilder UIComponentService"/>
    <extension
-         point="org.eclipse.datatools.sqltools.sqlbuilder.SQLBuilderUIComponentService">
+         point="org.eclipse.datatools.sqltools.editor.core.SQLBuilderUIComponentService">
          <service
          	name="%SQLEditor.SQLBuilderName"
          	class="org.eclipse.datatools.sqltools.sqlbuilder.sqlbuilderdialog.SQLBuilderUIComponentService"/>
