--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -4,6 +4,7 @@ category.datatools.description=Database Development tools
 DatabaseManagement.command.explain=Get Execution Plan
 DatabaseManagement.command.execute=Execute All
 DatabaseManagement.command.execute.select=Execute Selected Text
+DatabaseManagement.command.dmldialog.select=Edit in SQL Query Builder...
 DatabaseManagement.ToggleComment=Toggle Comment
 DatabaseManagement.command.run=Run
 DatabaseManagement.command.debug=Debug
