--- a/plugins/org.eclipse.datatools.sqltools.editor.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/plugin.xml
@@ -2,5 +2,6 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension-point id="dbConfigurations" name="Database Contributions to SQL Development Tools" schema="schema/dbConfigurations.exsd"/>
+   <extension-point id="SQLBuilderUIComponentService" name="SQLBuilder UIComponentService" schema="schema/SQLBuilderUIComponentService.exsd"/>
 
 </plugin>
