[213392]  HSQLDB enablement plug-ins should be refactored for ui/non-ui separation

--- a/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
@@ -1,1 +1,7 @@
 bin.includes = META-INF/
+src.dir	= src/
+plugin.version =	1.0.0.200801041
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
