--- a/plugins/org.eclipse.datatools.enablement.hsqldb.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.ui/build.properties
@@ -2,3 +2,13 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+
+jars.compile.order = .
+output.. = bin/
+source.. = src/
+src.dir			 = src/
+plugin.version =	1.0.0.200801041
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
