BZ206691 - delivering additional fixes to help with lost profiles on startup

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -26,6 +26,7 @@ CloseManagedConnectionJob.error=Error closing {0} connection to {1}.
 CloseConnectionEventJob.name=Processing close connection event for {0}.
 assert.invalid.profile = Parsing error\: invalid attribute ({0})
 assert.invalid.profile.duplicateFactory = Parsing error\: duplicate factory id ({0})
+assert.invalid.profile.nullFactory = Parsing error\: null factory or factory id ({0}/{1})
 dialog.title.error.loadwizard = Error loading new wizard in "{0}"!
 operation.new.connectionprofile = Creating profile\: "{0}"
 error.connect = Problem connecting to profile "{0}."  See log file for more details.
@@ -45,6 +46,7 @@ trace.error.propertiesPersistenceHook = Could not load propertiesPersistenceHook
 trace.error.propertiesPersistenceHookSaveError = Error invoking properties persistent hook; persisting all properties (profile={0}, extension={1})
 trace.error.propertiesPersistenceHookLoadError = Error invoking properties persistent hook; transient properties not set (profile={0}, extension={1})
 trace.error.migration = Error loading migration element for connection profile provider (id={0}, migration class={1})
+trace.error.drivermigration = Error creating driver instance of profile (id={0}, driver id={1})
 
 migration.error.providerDoesNotExist = Error loading migration element: specified newProviderID is invalid (newProviderID={0})
 migration.error.invalidPropertyMigrationElement = Error loading migration element: propertyMigration must specify a newPropertyKey, an oldPropertyKey or both
