--- a/plugins/org.eclipse.datatools.connectivity/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                about.mappings,\
                about.properties,\
                eclipse32.gif,\
-               eclipse32.png
+               eclipse32.png,\
+               icons/
 jars.compile.order = .
 output.. = bin/
 source.. = src/
