BZ213258 - delivering fixes for import/export of driver info with profiles as well as adding problem markers for driver validation issues

--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -15,6 +15,7 @@ Database.category = Databases
 Extension.PropertyPage.General.Name = Common
 Extension.PropertyPage.Version.Name = Version
 ProfileFailure = Profile Failures
+driverProblem = Driver Problems
 Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
 Extension.NewRepositoryWizard.Name = Connection Profile Repository
