--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -31,6 +31,8 @@ dialog.title.error.loadwizard = Error loading new wizard in "{0}"!
 operation.new.connectionprofile = Creating profile\: "{0}"
 error.connect = Problem connecting to profile "{0}."  See log file for more details.
 marker.error = Problem connecting to profile {0}.  (Error\: {1})
+drivermarker.error = Problem with driver "{0}." (Error\: {1})
+drivermarker.import.error = Missing jar list for driver definition created during import of profile "{0}."
 profile.duplicate = Duplicate connection profile name "{0}"!
 profile.notexist = Connection profile "{0}" does not exist!
 duplicate.profile.name = Copy of {0}({1})
