--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
@@ -191,5 +191,16 @@
             </enablement>
          </actionProvider>
       </extension>
+      <extension
+            id="driverProblem"
+            name="%driverProblem"
+            point="org.eclipse.core.resources.markers">
+         <super
+               type="org.eclipse.core.resources.problemmarker">
+         </super>
+         <persistent
+               value="true">
+         </persistent>
+      </extension>
 
 </plugin>
