--- a/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
@@ -1,4 +1,7 @@
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               runtime/,\
+               plugin.properties,\
+               plugin.xml
 src.dir	= src/
 plugin.version =	1.0.0.200801041
 javadoc.dir =		doc/api/
