--- a/plugins/org.eclipse.datatools.enablement.hsqldb.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.ui/build.properties
@@ -1,7 +1,9 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.xml,\
+               plugin.properties
 
 jars.compile.order = .
 output.. = bin/
