--- a/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
@@ -5,8 +5,7 @@ bin.includes = plugin.xml,\
                about.html,\
                META-INF/,\
                .,\
-               icons/,\
-               runtime/
+               icons/
 jars.compile.order = .
 output.. = bin/
 source.. = src/
