--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -6,3 +6,10 @@ navigator.content.name = HSQLDB Profile Content Extension
 connection.factory = HSQLDB Connection Factory
 connection.profile = HSQLDB Connection Profile
 
+driver.category.name = HSQLDB
+driver.category.description = HSQLDB JDBC Drivers
+driver.version.category.name = 1.8
+driver.version.category.description = HSQLDB JDBC Drivers for Version 1.8
+driver.name = HSQLDB JDBC Driver
+driver.description = JDBC driver for HSQLDB
+
