[216056]  About files and plug-in names in Enablement

--- a/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb.dbdefinition/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                runtime/,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               about.html
 src.dir	= src/
 plugin.version =	1.0.0.200801041
 javadoc.dir =		doc/api/
