--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries.ui/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                plugin.properties,\
-               plugin.xml
+               plugin.xml,\
+               about.html
 src.dir	= src/
 plugin.version =	1.0.0.200711021
 javadoc.dir =		doc/api/
