--- a/plugins/org.eclipse.datatools.enablement.ibm.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.ui/build.properties
@@ -2,4 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about.html
+               about.html,\
+               plugin.properties
+src.dir	= src/
+plugin.version =	1.0.0.200711021
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
