--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="driverPropertyEditor" name="Driver Property Editor" schema="schema/driverPropertyEditor.exsd"/>
    <extension-point id="driverUIContributor" name="Driver UI Contributor" schema="schema/driverUIContributor.exsd"/>
+   <extension-point id="connectionProfileImage" name="Connection Profile Image" schema="schema/connectionProfileImage.exsd"/>
    <extension point="org.eclipse.ui.preferencePages">
    	<page name="%datatools.preference.page.name" class="org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"
    	id = "org.eclipse.datatools.connectivity.internal.ui.preferences.DataToolsMainPage"/>
