--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/.settings/org.eclipse.jdt.core.prefs
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/.settings/org.eclipse.jdt.core.prefs
@@ -1,6 +1,6 @@
-#Fri Apr 13 14:14:14 PDT 2007
+#Fri Jan 18 16:49:41 PST 2008
 eclipse.preferences.version=1
-org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=disabled
+org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.4
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.4
