--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005 Sybase, Inc.
+## Copyright (c) 2005, 2008 Sybase, Inc.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
 ##
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
+##	  IBM Corporation = bug fix #203829
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
 ImportProfilesDialog.btnOverwrite.text=&Overwrite existing connection profiles with same names
@@ -93,6 +94,7 @@ CPVersionPropertyPage.label.versionUnavailable=Version information is unavailabl
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileSummaryPage.button.testConnection=&Test Connection
 CommonLabelProviderBase.label.version={0} ({1} v. {2}) 
+CommonLabelProviderBase.label.version.versionless={0} ({1}) 
 CommonLabelProviderBase.label.localRepository=Workspace Repository (Local)
 
 properties.connectionprofile.type = Profile Type
