MaxDB for DTP: adjust build.properties. https://bugs.eclipse.org/bugs/show_bug.cgi?id=217130

--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb.dbdefinition/build.properties
@@ -3,6 +3,6 @@ bin.includes = META-INF/,\
                runtime/,\
                plugin.properties,\
                plugin.xml,\
-               bin/,\
-               .
+               .,\
+               about.html
 source.. = runtime/
