--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb.ui/build.properties
@@ -1,8 +1,8 @@
 jars.compile.order = .
 bin.includes = META-INF/,\
-               src/,\
                plugin.properties,\
                plugin.xml,\
-               bin/,\
-               .
+               .,\
+               icons/,\
+               about.html
 source.. = src/
