--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb/build.properties
@@ -2,6 +2,7 @@ jars.compile.order = .
 bin.includes = META-INF/,\
                plugin.properties,\
                plugin.xml,\
-               bin/,\
-               .
+               .,\
+               icons/,\
+               about.html
 source.. = src/
