MaxDB for DTP: add Java 1.4 requirement to build.properties.

--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb.dbdefinition/build.properties
@@ -6,3 +6,5 @@ bin.includes = META-INF/,\
                .,\
                about.html
 source.. = runtime/
+javac.source =		1.4
+javac.target =		1.4
