--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb/build.properties
@@ -6,3 +6,5 @@ bin.includes = META-INF/,\
                icons/,\
                about.html
 source.. = src/
+javac.source =		1.4
+javac.target =		1.4
