BZ105552 - adding new driverValuesProvider property for drivers and driver overrides to allow programmatic setting of jarlists for platform-specific paths and more

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
@@ -30,12 +30,17 @@ DERBY_CATEGORY_NAME=Derby
 10_2_VERSION_CATEGORY_NAME = 10.2
 
 DERBY_EMBEDDED_DRIVER_TEMPLATE_NAME=Derby Embedded JDBC Driver
+DERBY_EMBEDDED_DRIVER_DEFAULT_INSTANCE_NAME=Derby Embedded JDBC Driver 10.0
 DERBY_OTHER_DRIVER_TEMPLATE_NAME = Other Driver
 DERBY101_EMBEDDED_DRIVER_TEMPLATE_NAME=Derby Embedded JDBC Driver
+DERBY101_EMBEDDED_DRIVER_DEFAULT_INSTANCE_NAME=Derby Embedded JDBC Driver 10.1
 DERBY_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=DB2 Universal Driver
 DERBY101_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=DB2 Universal Driver
 DERBY101_CLIENT_DRIVER_TEMPLATE_NAME = Derby Client JDBC Driver
+DERBY101_CLIENT_DRIVER_DEFAULT_INSTANCE_NAME = Derby Client JDBC Driver 10.1
 DERBY101_OTHER_DRIVER_TEMPLATE_NAME = Other Driver
 DERBY102_EMBEDDED_DRIVER_TEMPLATE_NAME=Derby Embedded JDBC Driver
+DERBY102_EMBEDDED_DRIVER_DEFAULT_INSTANCE_NAME=Derby Embedded JDBC Driver 10.2
 DERBY102_CLIENT_DRIVER_TEMPLATE_NAME = Derby Client JDBC Driver
+DERBY102_CLIENT_DRIVER_DEFAULT_INSTANCE_NAME = Derby Client JDBC Driver 10.2
 DERBY102_OTHER_DRIVER_TEMPLATE_NAME = Other Driver
