[217345] Tweaked MANIFEST.MF and build.properties for the o.e.d.modelbase.sql.edit plugin to resolve build problem

--- a/plugins/org.eclipse.datatools.modelbase.sql.query.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query.edit/build.properties
@@ -1,14 +1,14 @@
-
 # <copyright>
 # </copyright>
 #
-# $Id$
+# $Id: build.properties,v 1.2 2008/01/31 02:58:42 bpayton Exp $
 
-bin.includes = org.eclipse.datatools.modelbase.sql.query.edit.jar,\
-               icons/,\
+bin.includes = icons/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
-jars.compile.order = org.eclipse.datatools.modelbase.sql.query.edit.jar
-source.org.eclipse.datatools.modelbase.sql.query.edit.jar = src/
-output.org.eclipse.datatools.modelbase.sql.query.edit.jar = bin/
+               .,\
+               plugin.properties,\
+               about.html
+jars.compile.order = .
+source.. = src/
+output.. = bin/
