--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.xml
@@ -11,14 +11,24 @@
             icon="icons/fieldlist.ico"
             profile="%oda.data.source.id"/>
    </extension>
-   
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.connectionProfileImage">
+      <profileImage
+            profileID="%oda.data.source.id"
+            icon="icons/profile.gif">
+      </profileImage>
+   </extension>   
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
             id="%oda.data.source.id"
             name="%profile.propertypage.name"
-            class="org.eclipse.datatools.enablement.oda.xml.ui.wizards.XMLPropertyPage"
-            objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
+            class="org.eclipse.datatools.enablement.oda.xml.ui.wizards.XMLPropertyPage">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipse.datatools.connectivity.IConnectionProfile">
+            </instanceof>
+         </enabledWhen>
          <filter
                name="org.eclipse.datatools.profile.property.id"
                value="%oda.data.source.id"/>
