[219036]  Derby strings should be updated with current IBM driver name

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
@@ -34,8 +34,8 @@ DERBY_EMBEDDED_DRIVER_DEFAULT_INSTANCE_NAME=Derby Embedded JDBC Driver 10.0
 DERBY_OTHER_DRIVER_TEMPLATE_NAME = Other Driver
 DERBY101_EMBEDDED_DRIVER_TEMPLATE_NAME=Derby Embedded JDBC Driver
 DERBY101_EMBEDDED_DRIVER_DEFAULT_INSTANCE_NAME=Derby Embedded JDBC Driver 10.1
-DERBY_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=DB2 Universal Driver
-DERBY101_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=DB2 Universal Driver
+DERBY_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=IBM Data Server Driver for JDBC and SQLJ
+DERBY101_NETWORK_EMBEDDED_DRIVER_TEMPLATE_NAME=IBM Data Server Driver for JDBC and SQLJ
 DERBY101_CLIENT_DRIVER_TEMPLATE_NAME = Derby Client JDBC Driver
 DERBY101_CLIENT_DRIVER_DEFAULT_INSTANCE_NAME = Derby Client JDBC Driver 10.1
 DERBY101_OTHER_DRIVER_TEMPLATE_NAME = Other Driver
